# Probspace_geme_compe

./: .gitignore  Probspace_geme_compe.lnk  README.md  run_pandas_profiling.sh  run_train_lgb.sh  作業ログ.xlsx
code/: .gitignore  feature_engineering.py  feature_select.py  train_lgb.py  train_nn.py  util.py
code/config/: best_params1.yml  best_params_eng1_1_csv_tuining.yml  best_params_eng1_1_csv_tuining_select_cols.yml  best_params_eng2_csv_tuining.yml
notebook/: .gitignore  A1-player_search_20201009.ipynb  EDA.py  adversarial_validation.ipynb  adversarial_validation.py  feature_engineering.ipynb  feature_engineering.py  first.py  model_nn.ipynb  model_nn.py  sample_code_20201009.ipynb  second.py  third.ipynb  third.py  tmp.ipynb  tmp.py  topic_EDA.ipynb  topic_EDA.py  train.ipynb  train.py
poetry_best_notebook_cp/: public_submit結果.txt  pycaret-2-classification_code_eng2_csv.ipynb  pyproject.toml
