[tool.poetry]
name = "pycaret2"
version = "0.1.0"
description = ""
authors = ["riron1206 <rironyokoi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pycaret = "2.1"
jupyter = "^1.0.0"
black = "^20.8b1"
jupyter_contrib_nbextensions = "^0.5.1"
jupytext = "^1.5.2"
optuna = "^2.0.0"
pyarrow = "^1.0.1"
category-encoders = "^2.2.2"
papermill = "^2.1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
